tests/rosetta/out/Zig/4-rings-or-4-squares-puzzle.error
zig build: exit status 1
/tmp/4-rings-or-4-squares-puzzle.zig:25:9: error: local variable is never mutated
/tmp/4-rings-or-4-squares-puzzle.zig:25:9: note: consider using 'const'
